flicker issue and contact form on page issue fixed

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,10 +1,8 @@
 .headerfixed {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    display: block;
-    /* background-color: #e5e4e0; */
-    background: linear-gradient(to right, #e5e4e0, white);
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
-    z-index: 999999;
-  }
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background: linear-gradient(to right, #e5e4e0 0%, white 100%);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 999999;
+}
