--- a/src/styles.css
+++ b/src/styles.css
@@ -70,8 +70,8 @@
     bottom: 13%;
     right: 6%;
     margin-top: 20px;
-    min-width: 400px;
-    width: 400px;
+    /* min-width: 400px;
+    width: 400px; */
 }
 
 a {
